@@ -1,11 +1,12 @@
 package fap.voteplus;
 
 import cn.nukkit.Player;
+import lombok.AllArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@AllArgsConstructor
 public class VotePlayer {
 
     public static List<VotePlayer> players = new ArrayList<>();
@@ -34,20 +35,18 @@ public class VotePlayer {
     }
 
     public static List<VotePlayer> winners() {
-        return players.stream().filter(vp -> vp.mode == 0).collect(Collectors.toList());
+        return players.stream().filter(vp -> vp.mode == 0).toList();
     }
 
     public static List<VotePlayer> lost() {
-        return players.stream().filter(vp -> vp.mode == 1).collect(Collectors.toList());
+        return players.stream().filter(vp -> vp.mode == 1).toList();
     }
 
     private final Player player;
-    private final int mode; // 0=赞成/1=反对
-
-    public VotePlayer(Player player, int mode) {
-        this.player = player;
-        this.mode = mode;
-    }
+    /**
+     * 0=反对 1=同意
+     */
+    private final int mode;
 
     public String getName() {
         return player.getName();
